--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,8 @@ a {
   border-radius: 4px;
   letter-spacing: 0.06em;
   border-width: 0px;
+  /* ??????? */
+  cursor: pointer;
 }
 /*MAIN */
 .section-title {
@@ -136,7 +138,11 @@ a {
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
-
+/* ???????? */
+.adress-footer a:hover,
+.adress-footer a:focus {
+  color: var(--accent-color);
+}
 .adress-footer p {
   color: var(--button-text-color);
   font-style: normal;
@@ -170,10 +176,9 @@ a {
 /* section */
 .price-button {
   font-family: Roboto;
-
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.625;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   background-color: var(--button-color);
@@ -185,4 +190,16 @@ a {
   background-color: var(--accent-color);
   color: var(--button-text-color);
   cursor: pointer;
+}
+.work-list .title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
+}
+.work-list p {
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
 }
